Add remove and add test

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ bin
 /.vs/DataStructures/v16/Server/sqlite3/storage.ide
 /.vs/DataStructures/v16/Server/sqlite3/storage.ide-shm
 /.vs/DataStructures/v16/Server/sqlite3/storage.ide-wal
+*.dtbcache
